# ai-connectM

./: Makefile  README.md  pyproject.toml
src/my_package/: main.py
src/my_package/players/ai/: minimax.py
